# Arduino-7Segment

./: .gitmodules  BasicSegment.cpp  BasicSegment.h  CMakeLists.txt  README.md  SingleDigitSevenSegment.cpp  SingleDigitSevenSegment.h  TwoDigitSevenSegment.cpp  TwoDigitSevenSegment.h
test/: CMakeLists.txt  TestBasicSegment.cpp  TestSingleDigitSevenSegment.cpp  TestTwoDigitSevenSegment.cpp
test/Placeholders/: Adafruit.h
